[package]
name = "fluster"
version = "0.1.0"
edition = "2021"

[features]
default = ["opengl", "vulkan"]
opengl = []
metal = ["dep:metal"]
vulkan = []

[dependencies]
metal = { version = "0.30.0", optional = true }
with_builtin_macros = "0.1.0"

[build-dependencies]
bindgen = "0.70.1"
pkg-config = "0.3.31"
