[workspace]
members = ["build-support"]

[workspace.package]
version = "0.1.0"

[package]
name = "fluster"
links = "flutter_engine"
version.workspace = true
edition = "2021"

[features]
default = ["opengl", "vulkan"]
opengl = []
metal = ["dep:metal"]
vulkan = []

[dependencies]
const_format = "0.2.33"
metal = { version = "0.30.0", optional = true }
tracing = "0.1.41"

[build-dependencies]
bindgen = "0.70.1"
pkg-config = "0.3.31"
